Add music controller, routes, and model; update styles and colors

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,7 +3,7 @@
   --background-color: #2a2a2a;
   --foreground-color: #2a2a2a;
   --text-color: #f1f1f1;
-  --primary-color: #7d6c91;
+  --primary-color: #a785eb;
   --secondary-color: #4b4b4b;
   --button-color: #575757;
   --button-text-color: #ffffff;
