--- a/styles/globals.css
+++ b/styles/globals.css
@@ -262,3 +262,11 @@ button {
     display: none;
   }
 }
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  -webkit-box-shadow: 0 0 0 30px var(--background-color) inset !important;
+  -webkit-text-fill-color: #ffffff !important;
+}
