--- a/styles/globals.css
+++ b/styles/globals.css
@@ -123,7 +123,7 @@ input {
 .username {
   font-weight: 300;
   margin-right: 8px;
-  opacity: 0;
+  opacity: 1;
   transition: opacity 0.3s ease-in-out;
   color: var(--username-color);
 }
@@ -189,13 +189,13 @@ button {
 }
 
 .sender-bubble {
-  background-color: var(--sender-bubble-color);
+  background-color: var(--background-color);
   float: right;
   border-top-right-radius: 5px;
 }
 
 .receiver-bubble {
-  background-color: var(--receiver-bubble-color);
+  background-color: var(--background-color);
   float: left;
   border-top-left-radius: 5px;
 }
